Prod-EU/force-app/main/default/objects/Account/fields/OK_Ind_Usual_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Usual_Last_Name__c</fullName>
    <description>OneKey - Tracks Ind Usual Last Name. Useful for CA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ind. Usual Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>