Prod-EU/force-app/main/default/objects/Account/fields/OK_LANR1_Id__c.field-meta.xml
<CustomField>
    <fullName>OK_LANR1_Id__c</fullName>
    <description>OneKey - Records  7 digit unique no. for Prescriber Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LANR1 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>