Prod-EU/force-app/main/default/objects/Account/fields/OK_LANR2_Id__c.field-meta.xml
<CustomField>
    <fullName>OK_LANR2_Id__c</fullName>
    <description>OneKey - Stores the is 1st specialty code, this combining with Prescriber Id is the one we use today.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FG1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>