Prod-EU/force-app/main/default/objects/Account/fields/OK_LANR3_Id__c.field-meta.xml
<CustomField>
    <fullName>OK_LANR3_Id__c</fullName>
    <description>OneKey - Stores the is 2nd specialty code, used along with the Prescriber Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FG2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>