Prod-EU/force-app/main/default/objects/Account/fields/OK_LANR_FG2__c.field-meta.xml
<CustomField>
    <fullName>OK_LANR_FG2__c</fullName>
    <description>Records the first 7 digit of LANR with the Spec 2</description>
    <formula>IF(AND(NOT(ISBLANK(OK_LANR1_Id__c)), NOT(ISBLANK(OK_LANR3_Id__c))), OK_LANR1_Id__c+ OK_LANR3_Id__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LANR FG2</label>
    <type>Text</type>
</CustomField>