Prod-EU/force-app/main/default/objects/Account/fields/OK_Last_Quality_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>OK_Last_Quality_Check_Date__c</fullName>
    <description>OneKey - Date of Last QC Check Update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Quality Check Date</label>
    <type>Date</type>
</CustomField>