Prod-EU/force-app/main/default/objects/Account/fields/OK_Legal_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Legal_Category__c</fullName>
    <description>OneKey - Picklist Code = CAJ</description>
    <label>Legal Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>gAG</fullName>
            </value>
            <value>
                <fullName>AG&amp;Co.KG</fullName>
            </value>
            <value>
                <fullName>AG&amp;Co.KGaA</fullName>
            </value>
            <value>
                <fullName>eG</fullName>
            </value>
            <value>
                <fullName>e.V.</fullName>
            </value>
            <value>
                <fullName>GbR</fullName>
            </value>
            <value>
                <fullName>GmbH</fullName>
            </value>
            <value>
                <fullName>gGmbH</fullName>
            </value>
            <value>
                <fullName>GmbH&amp;Co.KG</fullName>
            </value>
            <value>
                <fullName>GmbH&amp;Co.KGaA</fullName>
            </value>
            <value>
                <fullName>GmbH&amp;Co.OHG</fullName>
            </value>
            <value>
                <fullName>InvAG</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>KGaA</fullName>
            </value>
            <value>
                <fullName>Limited&amp;Co.KG</fullName>
            </value>
            <value>
                <fullName>OHG</fullName>
            </value>
            <value>
                <fullName>PartG</fullName>
            </value>
            <value>
                <fullName>PartG mbB</fullName>
            </value>
            <value>
                <fullName>Stiftung</fullName>
            </value>
            <value>
                <fullName>Stiftung&amp;Co.KG</fullName>
            </value>
            <value>
                <fullName>Stiftung&amp;Co.KGaA</fullName>
            </value>
            <value>
                <fullName>StiftGmbH&amp;CoKG</fullName>
            </value>
            <value>
                <fullName>StilleGesellsch</fullName>
            </value>
            <value>
                <fullName>UG(haftbeschrkt)</fullName>
            </value>
            <value>
                <fullName>UG(habesch)&amp;CoKG</fullName>
            </value>
            <value>
                <fullName>VVaG</fullName>
            </value>
            <value>
                <fullName>SCE</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>EWIV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>