Prod-EU/force-app/main/default/objects/Account/fields/OK_License_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>OK_License_Status_Date__c</fullName>
    <description>OneKey - License status date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License Status Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>