Prod-EU/force-app/main/default/objects/Account/fields/OK_Main_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Main_Category__c</fullName>
    <description>OneKey - Picklist Code = LEX</description>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacy/Wholesaler</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Supplying Medical Center</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Other Institution</fullName>
            </value>
            <value>
                <fullName>Home Address</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Academic Institution</fullName>
            </value>
            <value>
                <fullName>Medical Health Teams</fullName>
            </value>
            <value>
                <fullName>Long Term Care Facility</fullName>
            </value>
            <value>
                <fullName>Medical Center</fullName>
            </value>
            <value>
                <fullName>Private Address</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Government Body</fullName>
            </value>
            <value>
                <fullName>Administrative Institution</fullName>
            </value>
            <value>
                <fullName>Medical Health Network</fullName>
            </value>
            <value>
                <fullName>Dental Practice</fullName>
            </value>
            <value>
                <fullName>Single Practice</fullName>
            </value>
            <value>
                <fullName>Group Practice</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>