Prod-EU/force-app/main/default/objects/Account/fields/OK_Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>OK_Number_of_Beds__c</fullName>
    <description>OneKey - Number of Beds in the Facility</description>
    <label>Number of Beds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>