Prod-EU/force-app/main/default/objects/Account/fields/OK_Old_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>OK_Old_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>