Prod-EU/force-app/main/default/objects/Account/fields/OK_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>OK_Preferred_Language__c</fullName>
    <description>OneKey - Records the Preferred Language</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>