Prod-EU/force-app/main/default/objects/Account/fields/OK_Qualifications_1__c.field-meta.xml
<CustomField>
    <fullName>OK_Qualifications_1__c</fullName>
    <description>OneKey - Picklist Code = QLF</description>
    <label>Qualifications 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retirement home minder</fullName>
            </value>
            <value>
                <fullName>Out Patient physician</fullName>
            </value>
            <value>
                <fullName>Ambulant Surgery</fullName>
            </value>
            <value>
                <fullName>Angiological activity</fullName>
            </value>
            <value>
                <fullName>Aesthetic Medicine</fullName>
            </value>
            <value>
                <fullName>Doctor / German Railway</fullName>
            </value>
            <value>
                <fullName>Doctor / Authority</fullName>
            </value>
            <value>
                <fullName>Company medical officer</fullName>
            </value>
            <value>
                <fullName>Doctor / German border police / Customs duty</fullName>
            </value>
            <value>
                <fullName>Breast Nurse</fullName>
            </value>
            <value>
                <fullName>Doc/Military</fullName>
            </value>
            <value>
                <fullName>Cardiological activity</fullName>
            </value>
            <value>
                <fullName>Case management</fullName>
            </value>
            <value>
                <fullName>Diabetes assistant</fullName>
            </value>
            <value>
                <fullName>Diabetes consultant</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Discharge Planner</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Endodontics</fullName>
            </value>
            <value>
                <fullName>Endocrinological activity</fullName>
            </value>
            <value>
                <fullName>Authorisation</fullName>
            </value>
            <value>
                <fullName>Nutritionist</fullName>
            </value>
            <value>
                <fullName>Ethics Committee</fullName>
            </value>
            <value>
                <fullName>Producer community</fullName>
            </value>
            <value>
                <fullName>In charge of advanced training</fullName>
            </value>
            <value>
                <fullName>Gastroenterological activity</fullName>
            </value>
            <value>
                <fullName>Family Doctor</fullName>
            </value>
            <value>
                <fullName>Hepatology</fullName>
            </value>
            <value>
                <fullName>HIV doctor</fullName>
            </value>
            <value>
                <fullName>Hygiene Commissioner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>