Prod-EU/force-app/main/default/objects/Account/fields/OK_Sector__c.field-meta.xml
<CustomField>
    <fullName>OK_Sector__c</fullName>
    <description>OneKey - Picklist Code = PPA</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>