Prod-EU/force-app/main/default/objects/Account/fields/OK_Status_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>OK_Status_Check_Date__c</fullName>
    <description>OneKey - Date of Last Status Update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Check Date</label>
    <type>Date</type>
</CustomField>