Prod-EU/force-app/main/default/objects/Account/fields/OK_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>OK_Status_Reason__c</fullName>
    <description>OneKey - Picklist Code = CAU</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Loading</fullName>
            </value>
            <value>
                <fullName>Relation : Creation / Suppression / Checking</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Invalidation</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Maternity/Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Complete check</fullName>
            </value>
            <value>
                <fullName>Duplicate Reversal</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Relation creation</fullName>
            </value>
            <value>
                <fullName>Relation suppression</fullName>
            </value>
            <value>
                <fullName>Data Privacy Law</fullName>
            </value>
            <value>
                <fullName>Simple modification</fullName>
            </value>
            <value>
                <fullName>Moved to another country</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Quality control</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>No longer working</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Unverified invalidation from rep</fullName>
            </value>
            <value>
                <fullName>Unknown address (Postal return)</fullName>
            </value>
            <value>
                <fullName>Moved/unknown address</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>History forcing</fullName>
            </value>
            <value>
                <fullName>Removed from register</fullName>
            </value>
            <value>
                <fullName>Incorrect Professional Type</fullName>
            </value>
            <value>
                <fullName>Temporarily Inactive</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Licence Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>