Prod-EU/force-app/main/default/objects/Account/fields/OK_Tendency_2__c.field-meta.xml
<CustomField>
    <fullName>OK_Tendency_2__c</fullName>
    <description>OneKey - Picklist Code = TEN</description>
    <label>Tendency 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
            <value>
                <fullName>Allergology</fullName>
            </value>
            <value>
                <fullName>Andrology</fullName>
            </value>
            <value>
                <fullName>Medical Quality management</fullName>
            </value>
            <value>
                <fullName>Balneology</fullName>
            </value>
            <value>
                <fullName>Company Medecine</fullName>
            </value>
            <value>
                <fullName>Blood transfusion</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Dermatological histology</fullName>
            </value>
            <value>
                <fullName>Diabetology</fullName>
            </value>
            <value>
                <fullName>Aviation / Aerospacial Medecine</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Gynaecological cytology</fullName>
            </value>
            <value>
                <fullName>Hand Surgery</fullName>
            </value>
            <value>
                <fullName>Haemostasiology</fullName>
            </value>
            <value>
                <fullName>Homeopathy</fullName>
            </value>
            <value>
                <fullName>Infectology</fullName>
            </value>
            <value>
                <fullName>Intensive Care</fullName>
            </value>
            <value>
                <fullName>Child-Endocrinology and -Diabetology</fullName>
            </value>
            <value>
                <fullName>Child-Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Child-Nephrology</fullName>
            </value>
            <value>
                <fullName>Child-Orthopaedics</fullName>
            </value>
            <value>
                <fullName>Child-Pneumology</fullName>
            </value>
            <value>
                <fullName>Child-Rheumatology</fullName>
            </value>
            <value>
                <fullName>Laboratory diagnostics</fullName>
            </value>
            <value>
                <fullName>Medical genetics</fullName>
            </value>
            <value>
                <fullName>Medical Computing</fullName>
            </value>
            <value>
                <fullName>Magnetic resonance imaging</fullName>
            </value>
            <value>
                <fullName>Naturopathic treatment</fullName>
            </value>
            <value>
                <fullName>Emergency medical aid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>