Prod-EU/force-app/main/default/objects/Account/fields/OK_Top_Level_Parent__c.field-meta.xml
<CustomField>
    <fullName>OK_Top_Level_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto populates using Account Trigger before Insert</description>
    <label>Top Level Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Top Level Account)</relationshipLabel>
    <relationshipName>ChildAccount</relationshipName>
    <type>Lookup</type>
</CustomField>