Prod-EU/force-app/main/default/objects/Account/fields/OK_Top_Level_ParentID__c.field-meta.xml
<CustomField>
    <fullName>OK_Top_Level_ParentID__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Name)),Parent.Id,
Id)))))</formula>
    <label>Top Level Parent ID</label>
    <type>Text</type>
</CustomField>